--- a/examples/index.html
+++ b/examples/index.html
@@ -606,10 +606,10 @@
       <div class="section">
         <h3 class="gpu">⚡ GPU Examples <code>mushu('#c').gpu(compute, render)</code></h3>
         <div class="grid">
-          <div class="card gpu"><h4>🔥 Fire</h4><p>Candle flame following mouse</p><a href="gpu-fire.html">Demo →</a></div>
-          <div class="card gpu"><h4>💨 Smoke</h4><p>Match smoke from cursor</p><a href="gpu-smoke.html">Demo →</a></div>
-          <div class="card gpu"><h4>🌊 Water</h4><p>Wave equation compute shader</p><a href="gpu-water.html">Demo →</a></div>
-          <div class="card gpu"><h4>🌈 Plasma</h4><p>High-performance plasma</p><a href="gpu-plasma.html">Demo →</a></div>
+          <div class="card gpu"><h4>🔥 Fire</h4><p>Candle flame following mouse</p><a href="gpu/fire.html">Demo →</a></div>
+          <div class="card gpu"><h4>💨 Smoke</h4><p>Match smoke from cursor</p><a href="gpu/smoke.html">Demo →</a></div>
+          <div class="card gpu"><h4>🌊 Water</h4><p>Wave equation compute shader</p><a href="gpu/water.html">Demo →</a></div>
+          <div class="card gpu"><h4>🌈 Plasma</h4><p>High-performance plasma</p><a href="gpu/plasma.html">Demo →</a></div>
         </div>
       </div>
 
@@ -617,10 +617,10 @@
       <div class="section">
         <h3 class="flow">🎯 Flow Examples <code>mushu('#c').flow().use(shader()).go()</code></h3>
         <div class="grid">
-          <div class="card flow"><h4>🔥 Fire</h4><p>Plugin-based fire with FPS</p><a href="yo-fire.html">Demo →</a></div>
-          <div class="card flow"><h4>💨 Smoke</h4><p>Fluent smoke simulation</p><a href="yo-smoke.html">Demo →</a></div>
-          <div class="card flow"><h4>🌊 Water</h4><p>Chainable water with Fresnel</p><a href="yo-water.html">Demo →</a></div>
-          <div class="card flow"><h4>🌈 Plasma</h4><p>Interactive plasma effect</p><a href="yo-plasma.html">Demo →</a></div>
+          <div class="card flow"><h4>🔥 Fire</h4><p>Plugin-based fire with FPS</p><a href="flow-glsl/fire.html">Demo →</a></div>
+          <div class="card flow"><h4>💨 Smoke</h4><p>Fluent smoke simulation</p><a href="flow-glsl/smoke.html">Demo →</a></div>
+          <div class="card flow"><h4>🌊 Water</h4><p>Chainable water with Fresnel</p><a href="flow-glsl/water.html">Demo →</a></div>
+          <div class="card flow"><h4>🌈 Plasma</h4><p>Interactive plasma effect</p><a href="flow-glsl/plasma.html">Demo →</a></div>
         </div>
       </div>
 
@@ -628,10 +628,10 @@
       <div class="section">
         <h3 class="gpuFlow">🚀 GPU Flow Examples <code>mushu('#c').gpu().flow().display().go()</code></h3>
         <div class="grid">
-          <div class="card gpuFlow"><h4>🔥 Fire</h4><p>WebGPU candle flame</p><a href="yogpu-fire.html">Demo →</a></div>
-          <div class="card gpuFlow"><h4>💨 Smoke</h4><p>WebGPU match smoke</p><a href="yogpu-smoke.html">Demo →</a></div>
-          <div class="card gpuFlow"><h4>🌊 Water</h4><p>Compute shader waves</p><a href="yogpu-water.html">Demo →</a></div>
-          <div class="card gpuFlow"><h4>🌈 Plasma</h4><p>GPU-accelerated plasma</p><a href="yogpu-plasma.html">Demo →</a></div>
+          <div class="card gpuFlow"><h4>🔥 Fire</h4><p>WebGPU candle flame</p><a href="flow-gpu/fire.html">Demo →</a></div>
+          <div class="card gpuFlow"><h4>💨 Smoke</h4><p>WebGPU match smoke</p><a href="flow-gpu/smoke.html">Demo →</a></div>
+          <div class="card gpuFlow"><h4>🌊 Water</h4><p>Compute shader waves</p><a href="flow-gpu/water.html">Demo →</a></div>
+          <div class="card gpuFlow"><h4>🌈 Plasma</h4><p>gpu/accelerated plasma</p><a href="flow-gpu/plasma.html">Demo →</a></div>
         </div>
       </div>
 
@@ -639,10 +639,10 @@
       <div class="section">
         <h3 class="boilerplate">📝 Boilerplate Examples <code>Vanilla WebGL2</code></h3>
         <div class="grid">
-          <div class="card boilerplate"><h4>🔥 Fire</h4><p>Raw WebGL2 from scratch</p><a href="boilerplate-fire.html">Code →</a></div>
-          <div class="card boilerplate"><h4>💨 Smoke</h4><p>Manual WebGL2 setup</p><a href="boilerplate-smoke.html">Code →</a></div>
-          <div class="card boilerplate"><h4>🌊 Water</h4><p>Hand-coded water sim</p><a href="boilerplate-water.html">Code →</a></div>
-          <div class="card boilerplate"><h4>🌈 Plasma</h4><p>Classic plasma vanilla</p><a href="boilerplate-plasma.html">Code →</a></div>
+          <div class="card boilerplate"><h4>🔥 Fire</h4><p>Raw WebGL2 from scratch</p><a href="boilerplate/fire.html">Code →</a></div>
+          <div class="card boilerplate"><h4>💨 Smoke</h4><p>Manual WebGL2 setup</p><a href="boilerplate/smoke.html">Code →</a></div>
+          <div class="card boilerplate"><h4>🌊 Water</h4><p>Hand-coded water sim</p><a href="boilerplate/water.html">Code →</a></div>
+          <div class="card boilerplate"><h4>🌈 Plasma</h4><p>Classic plasma vanilla</p><a href="boilerplate/plasma.html">Code →</a></div>
         </div>
       </div>
     </section>
