--- a/examples/visual-compare.html
+++ b/examples/visual-compare.html
@@ -305,9 +305,9 @@
           <span class="item-title">GLSL Fire</span>
           <span class="item-tag glsl">glsl()</span>
         </div>
-        <iframe class="item-frame" src="fire.html"></iframe>
+        <iframe class="item-frame" src="glsl/fire.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="fire.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="glsl/fire.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGL2</span>
         </div>
       </div>
@@ -316,9 +316,9 @@
           <span class="item-title">Flow Fire</span>
           <span class="item-tag flow">flow()</span>
         </div>
-        <iframe class="item-frame" src="yo-fire.html"></iframe>
+        <iframe class="item-frame" src="flow-glsl/fire.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="yo-fire.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="flow-glsl/fire.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGL2</span>
         </div>
       </div>
@@ -327,9 +327,9 @@
           <span class="item-title">GPU Fire</span>
           <span class="item-tag gpu">gpu()</span>
         </div>
-        <iframe class="item-frame" src="gpu-fire.html"></iframe>
+        <iframe class="item-frame" src="gpu/fire.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="gpu-fire.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="gpu/fire.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGPU</span>
         </div>
       </div>
@@ -338,9 +338,9 @@
           <span class="item-title">GPU Flow Fire</span>
           <span class="item-tag gpuflow">gpu().flow()</span>
         </div>
-        <iframe class="item-frame" src="yogpu-fire.html"></iframe>
+        <iframe class="item-frame" src="flow-gpu/fire.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="yogpu-fire.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="flow-gpu/fire.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGPU</span>
         </div>
       </div>
@@ -356,9 +356,9 @@
           <span class="item-title">GLSL Smoke</span>
           <span class="item-tag glsl">glsl()</span>
         </div>
-        <iframe class="item-frame" src="smoke.html"></iframe>
+        <iframe class="item-frame" src="glsl/smoke.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="smoke.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="glsl/smoke.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGL2</span>
         </div>
       </div>
@@ -367,9 +367,9 @@
           <span class="item-title">Flow Smoke</span>
           <span class="item-tag flow">flow()</span>
         </div>
-        <iframe class="item-frame" src="yo-smoke.html"></iframe>
+        <iframe class="item-frame" src="flow-glsl/smoke.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="yo-smoke.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="flow-glsl/smoke.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGL2</span>
         </div>
       </div>
@@ -378,9 +378,9 @@
           <span class="item-title">GPU Smoke</span>
           <span class="item-tag gpu">gpu()</span>
         </div>
-        <iframe class="item-frame" src="gpu-smoke.html"></iframe>
+        <iframe class="item-frame" src="gpu/smoke.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="gpu-smoke.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="gpu/smoke.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGPU</span>
         </div>
       </div>
@@ -389,9 +389,9 @@
           <span class="item-title">GPU Flow Smoke</span>
           <span class="item-tag gpuflow">gpu().flow()</span>
         </div>
-        <iframe class="item-frame" src="yogpu-smoke.html"></iframe>
+        <iframe class="item-frame" src="flow-gpu/smoke.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="yogpu-smoke.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="flow-gpu/smoke.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGPU</span>
         </div>
       </div>
@@ -407,9 +407,9 @@
           <span class="item-title">GLSL Water</span>
           <span class="item-tag glsl">glsl()</span>
         </div>
-        <iframe class="item-frame" src="water.html"></iframe>
+        <iframe class="item-frame" src="glsl/water.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="water.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="glsl/water.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGL2</span>
         </div>
       </div>
@@ -418,9 +418,9 @@
           <span class="item-title">Flow Water</span>
           <span class="item-tag flow">flow()</span>
         </div>
-        <iframe class="item-frame" src="yo-water.html"></iframe>
+        <iframe class="item-frame" src="flow-glsl/water.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="yo-water.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="flow-glsl/water.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGL2</span>
         </div>
       </div>
@@ -429,9 +429,9 @@
           <span class="item-title">GPU Water</span>
           <span class="item-tag gpu">gpu()</span>
         </div>
-        <iframe class="item-frame" src="gpu-water.html"></iframe>
+        <iframe class="item-frame" src="gpu/water.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="gpu-water.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="gpu/water.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGPU</span>
         </div>
       </div>
@@ -440,9 +440,9 @@
           <span class="item-title">GPU Flow Water</span>
           <span class="item-tag gpuflow">gpu().flow()</span>
         </div>
-        <iframe class="item-frame" src="yogpu-water.html"></iframe>
+        <iframe class="item-frame" src="flow-gpu/water.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="yogpu-water.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="flow-gpu/water.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGPU</span>
         </div>
       </div>
@@ -458,9 +458,9 @@
           <span class="item-title">GLSL Plasma</span>
           <span class="item-tag glsl">glsl()</span>
         </div>
-        <iframe class="item-frame" src="plasma.html"></iframe>
+        <iframe class="item-frame" src="glsl/plasma.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="plasma.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="glsl/plasma.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGL2</span>
         </div>
       </div>
@@ -469,9 +469,9 @@
           <span class="item-title">Flow Plasma</span>
           <span class="item-tag flow">flow()</span>
         </div>
-        <iframe class="item-frame" src="yo-plasma.html"></iframe>
+        <iframe class="item-frame" src="flow-glsl/plasma.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="yo-plasma.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="flow-glsl/plasma.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGL2</span>
         </div>
       </div>
@@ -480,9 +480,9 @@
           <span class="item-title">GPU Plasma</span>
           <span class="item-tag gpu">gpu()</span>
         </div>
-        <iframe class="item-frame" src="gpu-plasma.html"></iframe>
+        <iframe class="item-frame" src="gpu/plasma.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="gpu-plasma.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="gpu/plasma.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGPU</span>
         </div>
       </div>
@@ -491,9 +491,9 @@
           <span class="item-title">GPU Flow Plasma</span>
           <span class="item-tag gpuflow">gpu().flow()</span>
         </div>
-        <iframe class="item-frame" src="yogpu-plasma.html"></iframe>
+        <iframe class="item-frame" src="flow-gpu/plasma.html"></iframe>
         <div class="item-footer">
-          <a class="item-link" href="yogpu-plasma.html" target="_blank">Open Full →</a>
+          <a class="item-link" href="flow-gpu/plasma.html" target="_blank">Open Full →</a>
           <span class="item-tech">WebGPU</span>
         </div>
       </div>
@@ -511,28 +511,28 @@
           <span class="item-title">glsl()</span>
           <span class="item-tag glsl">glsl()</span>
         </div>
-        <iframe class="item-frame" src="fire.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="glsl/fire.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">flow()</span>
           <span class="item-tag flow">flow()</span>
         </div>
-        <iframe class="item-frame" src="yo-fire.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="flow-glsl/fire.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">gpu()</span>
           <span class="item-tag gpu">gpu()</span>
         </div>
-        <iframe class="item-frame" src="gpu-fire.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="gpu/fire.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">gpu().flow()</span>
           <span class="item-tag gpuflow">gpu().flow()</span>
         </div>
-        <iframe class="item-frame" src="yogpu-fire.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="flow-gpu/fire.html" style="height: 150px;"></iframe>
       </div>
     </div>
 
@@ -543,28 +543,28 @@
           <span class="item-title">glsl()</span>
           <span class="item-tag glsl">glsl()</span>
         </div>
-        <iframe class="item-frame" src="smoke.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="glsl/smoke.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">flow()</span>
           <span class="item-tag flow">flow()</span>
         </div>
-        <iframe class="item-frame" src="yo-smoke.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="flow-glsl/smoke.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">gpu()</span>
           <span class="item-tag gpu">gpu()</span>
         </div>
-        <iframe class="item-frame" src="gpu-smoke.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="gpu/smoke.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">gpu().flow()</span>
           <span class="item-tag gpuflow">gpu().flow()</span>
         </div>
-        <iframe class="item-frame" src="yogpu-smoke.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="flow-gpu/smoke.html" style="height: 150px;"></iframe>
       </div>
     </div>
 
@@ -575,28 +575,28 @@
           <span class="item-title">glsl()</span>
           <span class="item-tag glsl">glsl()</span>
         </div>
-        <iframe class="item-frame" src="water.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="glsl/water.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">flow()</span>
           <span class="item-tag flow">flow()</span>
         </div>
-        <iframe class="item-frame" src="yo-water.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="flow-glsl/water.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">gpu()</span>
           <span class="item-tag gpu">gpu()</span>
         </div>
-        <iframe class="item-frame" src="gpu-water.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="gpu/water.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">gpu().flow()</span>
           <span class="item-tag gpuflow">gpu().flow()</span>
         </div>
-        <iframe class="item-frame" src="yogpu-water.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="flow-gpu/water.html" style="height: 150px;"></iframe>
       </div>
     </div>
 
@@ -607,28 +607,28 @@
           <span class="item-title">glsl()</span>
           <span class="item-tag glsl">glsl()</span>
         </div>
-        <iframe class="item-frame" src="plasma.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="glsl/plasma.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">flow()</span>
           <span class="item-tag flow">flow()</span>
         </div>
-        <iframe class="item-frame" src="yo-plasma.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="flow-glsl/plasma.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">gpu()</span>
           <span class="item-tag gpu">gpu()</span>
         </div>
-        <iframe class="item-frame" src="gpu-plasma.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="gpu/plasma.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">gpu().flow()</span>
           <span class="item-tag gpuflow">gpu().flow()</span>
         </div>
-        <iframe class="item-frame" src="yogpu-plasma.html" style="height: 150px;"></iframe>
+        <iframe class="item-frame" src="flow-gpu/plasma.html" style="height: 150px;"></iframe>
       </div>
     </div>
   </section>
