--- a/examples/compare.html
+++ b/examples/compare.html
@@ -169,6 +169,12 @@
       color: #58a6ff;
       font-size: 1.5rem;
     }
+    
+    .home-link { position: fixed; bottom: 1rem; right: 1rem; background: linear-gradient(135deg, #ff6b6b, #feca57); 
+                 color: #000; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; 
+                 font-weight: bold; font-size: 0.85rem; box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3); 
+                 transition: all 0.2s; z-index: 100; font-family: monospace; }
+    .home-link:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(255, 107, 107, 0.4); }
   </style>
 </head>
 <body>
@@ -197,8 +203,8 @@
   <a href="#plasma" class="active">Plasma (WebGL)</a>
   <a href="#fire">Fire (WebGL)</a>
   <a href="#water">Water (WebGL)</a>
-  <a href="#gpu-plasma">Plasma (WebGPU)</a>
-  <a href="#gpu-fire">Fire (WebGPU)</a>
+  <a href="#gpu/plasma">Plasma (WebGPU)</a>
+  <a href="#gpu/fire">Fire (WebGPU)</a>
 </nav>
 
 <div class="philosophy">
@@ -621,12 +627,12 @@ sim.<span class="function">display</span>(<span class="string">`
 <!-- WEBGPU FIRE COMPARISON -->
 <!-- ═══════════════════════════════════════════════════════════════════════════ -->
 
-<section id="gpu-fire">
+<section id="gpu/fire">
   <h2>🔥 Fire Simulation — WebGPU</h2>
   
   <div class="demo-links">
-    <a href="mushu/examples/gpu-fire.html" class="demo-link gpu">▶ Run mushu WebGPU Fire</a>
-    <a href="webgpu-fire.html" class="demo-link" style="background: #484f58;">▶ Run Original</a>
+    <a href="mushu/examples/gpu/fire.html" class="demo-link gpu">▶ Run mushu WebGPU Fire</a>
+    <a href="webgpu/fire.html" class="demo-link" style="background: #484f58;">▶ Run Original</a>
   </div>
   
   <div class="comparison-grid">
@@ -838,6 +844,8 @@ context.<span class="function">configure</span>({ device, format, alphaMode: <sp
     });
   });
 </script>
+
+<a href="index.html" class="home-link">← Back to Index</a>
 
 </body>
 </html>
