--- a/examples/glsl/plasma.html
+++ b/examples/glsl/plasma.html
@@ -9,13 +9,18 @@
     .info { position: fixed; top: 10px; left: 10px; color: #fff; font: 14px monospace; 
             background: rgba(0,0,0,0.7); padding: 10px 16px; border-radius: 6px; z-index: 100; }
     .info code { color: #ff6b9d; }
+    .home-link { position: fixed; bottom: 1rem; right: 1rem; background: linear-gradient(135deg, #ff6b6b, #feca57); 
+                 color: #000; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; 
+                 font-weight: bold; font-size: 0.85rem; box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3); 
+                 transition: all 0.2s; z-index: 100; font-family: monospace; }
+    .home-link:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(255, 107, 107, 0.4); }
   </style>
 </head>
 <body>
 <div class="info">🎨 <code>mushu().glsl()</code> Plasma | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { mushu } from '../src/index.js';
+import { mushu } from '../../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // GLSL Helper - Classic Plasma Effect with Enhanced Visuals
@@ -133,5 +138,6 @@ mushu('#c').glsl(`
 console.log('%c 🌈 glsl() Plasma ', 'background: linear-gradient(90deg, #ff6b9d, #ff8fab); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
 console.log('Classic plasma effect using the glsl() one-liner helper');
 </script>
+<a href="index.html" class="home-link">← Back to Index</a>
 </body>
 </html>
