--- a/examples/gpu/fire.html
+++ b/examples/gpu/fire.html
@@ -9,13 +9,18 @@
     .info { position: fixed; top: 10px; left: 10px; color: #fff; font: 14px monospace; 
             background: rgba(0,0,0,0.7); padding: 10px 16px; border-radius: 6px; z-index: 100; }
     .info code { color: #ff6622; }
+    .home-link { position: fixed; bottom: 1rem; right: 1rem; background: linear-gradient(135deg, #ff6b6b, #feca57); 
+                 color: #000; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; 
+                 font-weight: bold; font-size: 0.85rem; box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3); 
+                 transition: all 0.2s; z-index: 100; font-family: monospace; }
+    .home-link:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(255, 107, 107, 0.4); }
   </style>
 </head>
 <body>
 <div class="info">🔥 <code>mushu().gpu(compute, render)</code> Candle Flame | Move mouse to position flame</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { mushu } from '../src/index.js';
+import { mushu } from '../../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // WebGPU Candle Flame - Interactive flame that follows mouse
@@ -219,5 +224,6 @@ mushu('#c').gpu(
 console.log('%c 🔥 WebGPU Candle Flame ', 'background: linear-gradient(90deg, #ff4400, #ff8800); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
 console.log('Move mouse to position the flame!');
 </script>
+<a href="index.html" class="home-link">← Back to Index</a>
 </body>
 </html>
