--- a/examples/flow-glsl/water.html
+++ b/examples/flow-glsl/water.html
@@ -20,7 +20,7 @@
 <div class="info">🌊 <code>mushu().flow()</code> Water | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
-import { mushu, shader, fps } from '../src/index.js';
+import { mushu, shader, fps } from '../../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
 // YO Water - Procedural Gerstner Waves (WebGL2)
