--- a/examples/glsl/fire.html
+++ b/examples/glsl/fire.html
@@ -14,6 +14,7 @@
                  font-weight: bold; font-size: 0.85rem; box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3); 
                  transition: all 0.2s; z-index: 100; font-family: monospace; }
     .home-link:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(255, 107, 107, 0.4); }
+    .home-link.hidden { display: none; }
   </style>
 </head>
 <body>
@@ -141,6 +142,22 @@ mushu('#c').glsl(`
 
 console.log('%c 🔥 mushu().glsl() Fire ', 'background: linear-gradient(90deg, #ff6b9d, #ff8fab); color: white; padding: 8px 16px; border-radius: 4px; font-weight: bold;');
 console.log('Simple shader-only fire effect using the mushu().glsl() one-liner helper');
+</script>
+<script>
+// Hide home-link if in iframe - run immediately and on load
+function hideIfIframe() {
+  if (window.self !== window.top) {
+    const link = document.querySelector('.home-link');
+    if (link) {
+      link.style.display = 'none';
+    }
+  }
+}
+if (document.readyState === 'loading') {
+  document.addEventListener('DOMContentLoaded', hideIfIframe);
+} else {
+  hideIfIframe();
+}
 </script>
 <a href="index.html" class="home-link">← Back to Index</a>
 </body>
