--- a/examples/index.html
+++ b/examples/index.html
@@ -480,7 +480,7 @@
          CODE EXAMPLES WITH TABS
          ═══════════════════════════════════════════════════════════════════════ -->
     <section class="code-section">
-      <h2>Four Ways to <span>Ship</span></h2>
+      <h2>Four Ways to <span>Cook</span></h2>
       
       <div class="tabs">
         <button class="tab glsl active" onclick="showTab('glsl')">mushu().glsl()</button>
@@ -573,7 +573,7 @@
     <section id="demos">
       <div class="demos-header">
         <h2>🎨 Examples</h2>
-        <p>Every effect runs the same shader code across all four APIs</p>
+        <p>See different shader examples using all four APIs as well as Vanilla JS!</p>
       </div>
       
       <div class="method-legend">
