--- a/examples/glsl/plasma.html
+++ b/examples/glsl/plasma.html
@@ -3,18 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>mushu — glsl() Plasma Demo</title>
+  <link rel="stylesheet" href="../common.css">
   <style>
-    * { margin: 0; padding: 0; }
-    body { background: #000; overflow: hidden; }
-    .info { position: fixed; top: 10px; left: 10px; color: #fff; font: 14px monospace; 
-            background: rgba(0,0,0,0.7); padding: 10px 16px; border-radius: 6px; z-index: 100; }
     .info code { color: #ff6b9d; }
-    .home-link { position: fixed; bottom: 1rem; right: 1rem; background: linear-gradient(135deg, #ff6b6b, #feca57); 
-                 color: #000; padding: 0.75rem 1.5rem; border-radius: 25px; text-decoration: none; 
-                 font-weight: bold; font-size: 0.85rem; box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3); 
-                 transition: all 0.2s; z-index: 100; font-family: monospace; }
-    .home-link:hover { transform: translateY(-2px); box-shadow: 0 6px 20px rgba(255, 107, 107, 0.4); }
-    .home-link.hidden { display: none; }
   </style>
 </head>
 <body>
