--- a/examples/visual-compare.html
+++ b/examples/visual-compare.html
@@ -280,11 +280,11 @@
   <div class="legend">
     <div class="legend-item">
       <div class="legend-color glsl"></div>
-      <span>mushu().glsl()</span>
+      <span>mushu().gl()</span>
     </div>
     <div class="legend-item">
       <div class="legend-color flow"></div>
-      <span>mushu().flow() (WebGL2)</span>
+      <span>mushu().gl().flow() (WebGL2)</span>
     </div>
     <div class="legend-item">
       <div class="legend-color gpu"></div>
@@ -302,8 +302,8 @@
     <div class="comparison-grid">
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">GLSL Fire</span>
-          <span class="item-tag glsl">glsl()</span>
+          <span class="item-title">GL Fire</span>
+          <span class="item-tag glsl">gl()</span>
         </div>
         <iframe class="item-frame" src="glsl/fire.html"></iframe>
         <div class="item-footer">
@@ -314,7 +314,7 @@
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">Flow Fire</span>
-          <span class="item-tag flow">flow()</span>
+          <span class="item-tag flow">gl().flow()</span>
         </div>
         <iframe class="item-frame" src="flow-glsl/fire.html"></iframe>
         <div class="item-footer">
@@ -353,8 +353,8 @@
     <div class="comparison-grid">
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">GLSL Smoke</span>
-          <span class="item-tag glsl">glsl()</span>
+          <span class="item-title">GL Smoke</span>
+          <span class="item-tag glsl">gl()</span>
         </div>
         <iframe class="item-frame" src="glsl/smoke.html"></iframe>
         <div class="item-footer">
@@ -365,7 +365,7 @@
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">Flow Smoke</span>
-          <span class="item-tag flow">flow()</span>
+          <span class="item-tag flow">gl().flow()</span>
         </div>
         <iframe class="item-frame" src="flow-glsl/smoke.html"></iframe>
         <div class="item-footer">
@@ -404,8 +404,8 @@
     <div class="comparison-grid">
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">GLSL Water</span>
-          <span class="item-tag glsl">glsl()</span>
+          <span class="item-title">GL Water</span>
+          <span class="item-tag glsl">gl()</span>
         </div>
         <iframe class="item-frame" src="glsl/water.html"></iframe>
         <div class="item-footer">
@@ -416,7 +416,7 @@
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">Flow Water</span>
-          <span class="item-tag flow">flow()</span>
+          <span class="item-tag flow">gl().flow()</span>
         </div>
         <iframe class="item-frame" src="flow-glsl/water.html"></iframe>
         <div class="item-footer">
@@ -455,8 +455,8 @@
     <div class="comparison-grid">
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">GLSL Plasma</span>
-          <span class="item-tag glsl">glsl()</span>
+          <span class="item-title">GL Plasma</span>
+          <span class="item-tag glsl">gl()</span>
         </div>
         <iframe class="item-frame" src="glsl/plasma.html"></iframe>
         <div class="item-footer">
@@ -467,7 +467,7 @@
       <div class="comparison-item">
         <div class="item-header">
           <span class="item-title">Flow Plasma</span>
-          <span class="item-tag flow">flow()</span>
+          <span class="item-tag flow">gl().flow()</span>
         </div>
         <iframe class="item-frame" src="flow-glsl/plasma.html"></iframe>
         <div class="item-footer">
@@ -508,15 +508,15 @@
     <div class="comparison-grid">
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">glsl()</span>
-          <span class="item-tag glsl">glsl()</span>
+          <span class="item-title">gl()</span>
+          <span class="item-tag glsl">gl()</span>
         </div>
         <iframe class="item-frame" src="glsl/fire.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">flow()</span>
-          <span class="item-tag flow">flow()</span>
+          <span class="item-title">gl().flow()</span>
+          <span class="item-tag flow">gl().flow()</span>
         </div>
         <iframe class="item-frame" src="flow-glsl/fire.html" style="height: 150px;"></iframe>
       </div>
@@ -540,15 +540,15 @@
     <div class="comparison-grid">
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">glsl()</span>
-          <span class="item-tag glsl">glsl()</span>
+          <span class="item-title">gl()</span>
+          <span class="item-tag glsl">gl()</span>
         </div>
         <iframe class="item-frame" src="glsl/smoke.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">flow()</span>
-          <span class="item-tag flow">flow()</span>
+          <span class="item-title">gl().flow()</span>
+          <span class="item-tag flow">gl().flow()</span>
         </div>
         <iframe class="item-frame" src="flow-glsl/smoke.html" style="height: 150px;"></iframe>
       </div>
@@ -572,15 +572,15 @@
     <div class="comparison-grid">
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">glsl()</span>
-          <span class="item-tag glsl">glsl()</span>
+          <span class="item-title">gl()</span>
+          <span class="item-tag glsl">gl()</span>
         </div>
         <iframe class="item-frame" src="glsl/water.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">flow()</span>
-          <span class="item-tag flow">flow()</span>
+          <span class="item-title">gl().flow()</span>
+          <span class="item-tag flow">gl().flow()</span>
         </div>
         <iframe class="item-frame" src="flow-glsl/water.html" style="height: 150px;"></iframe>
       </div>
@@ -604,15 +604,15 @@
     <div class="comparison-grid">
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">glsl()</span>
-          <span class="item-tag glsl">glsl()</span>
+          <span class="item-title">gl()</span>
+          <span class="item-tag glsl">gl()</span>
         </div>
         <iframe class="item-frame" src="glsl/plasma.html" style="height: 150px;"></iframe>
       </div>
       <div class="comparison-item">
         <div class="item-header">
-          <span class="item-title">flow()</span>
-          <span class="item-tag flow">flow()</span>
+          <span class="item-title">gl().flow()</span>
+          <span class="item-tag flow">gl().flow()</span>
         </div>
         <iframe class="item-frame" src="flow-glsl/plasma.html" style="height: 150px;"></iframe>
       </div>
