--- a/examples/flow-glsl/plasma.html
+++ b/examples/flow-glsl/plasma.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-<div class="info">⚡ <code>mushu().flow()</code> Plasma | Move mouse to interact</div>
+<div class="info">⚡ <code>mushu().gl().flow()</code> Plasma | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
 import { mushu, shader, fps } from '../../src/index.js';
@@ -37,7 +37,7 @@ import { mushu, shader, fps } from '../../src/index.js';
 // Move mouse to influence the plasma! Click for energy burst!
 // ═══════════════════════════════════════════════════════════════════════════
 
-mushu('#c').flow()
+mushu('#c').gl().flow()
   .use(shader(`
     // ─────────────────────────────────────────────────────────────────────
     // Noise Functions
