--- a/examples/flow-glsl/water.html
+++ b/examples/flow-glsl/water.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-<div class="info">🌊 <code>mushu().flow()</code> Water | Move mouse to interact</div>
+<div class="info">🌊 <code>mushu().gl().flow()</code> Water | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
 import { mushu, shader, fps } from '../../src/index.js';
@@ -38,7 +38,7 @@ import { mushu, shader, fps } from '../../src/index.js';
 // Move mouse to create ripples!
 // ═══════════════════════════════════════════════════════════════════════════
 
-mushu('#c').flow()
+mushu('#c').gl().flow()
   .use(shader(`
     // ─────────────────────────────────────────────────────────────────────
     // Noise Functions
