--- a/examples/glsl/smoke.html
+++ b/examples/glsl/smoke.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="../common.css">
 </head>
 <body>
-<div class="info">🎨 <code>mushu().glsl()</code> Smoke | Move mouse to interact</div>
+<div class="info">🎨 <code>mushu().gl()</code> Smoke | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
 import { mushu } from '../../src/index.js';
@@ -15,7 +15,7 @@ import { mushu } from '../../src/index.js';
 // GLSL Helper - Simple Shader-Only Volumetric Smoke
 // ═══════════════════════════════════════════════════════════════════════════
 
-mushu('#c').glsl(`
+mushu('#c').gl(`
   float hash(vec2 p) {
     vec3 p3 = fract(vec3(p.xyx) * 0.1031);
     p3 += dot(p3, p3.yzx + 33.33);
