--- a/examples/glsl/water.html
+++ b/examples/glsl/water.html
@@ -9,16 +9,16 @@
   </style>
 </head>
 <body>
-<div class="info">🎨 <code>mushu().glsl()</code> Water | Move mouse to interact</div>
+<div class="info">🎨 <code>mushu().gl()</code> Water | Move mouse to interact</div>
 <canvas id="c" style="position:fixed;inset:0;width:100%;height:100%"></canvas>
 <script type="module">
 import { mushu } from '../../src/index.js';
 
 // ═══════════════════════════════════════════════════════════════════════════
-// GLSL Helper - Simple Shader-Only Ocean Water Effect
+// GL Helper - Simple Shader-Only Ocean Water Effect
 // ═══════════════════════════════════════════════════════════════════════════
 
-mushu('#c').glsl(`
+mushu('#c').gl(`
   float hash(vec2 p) {
     return fract(sin(dot(p, vec2(127.1, 311.7))) * 43758.5453);
   }
