--- a/examples/flow-glsl/fire.html
+++ b/examples/flow-glsl/fire.html
@@ -36,7 +36,7 @@ import { mushu, shader, fps } from '../../src/index.js';
 // Move mouse to intensify flames!
 // ═══════════════════════════════════════════════════════════════════════════
 
-mushu('#c').gl().flow()
+mushu('#c').gl()
   .use(shader(`
     // ─────────────────────────────────────────────────────────────────────
     // Noise Functions
