--- a/examples/flow-glsl/smoke.html
+++ b/examples/flow-glsl/smoke.html
@@ -37,7 +37,10 @@ import { mushu, shader, fps } from '../../src/index.js';
 // Move mouse to disperse smoke!
 // ═══════════════════════════════════════════════════════════════════════════
 
-mushu('#c').gl().flow()
+// Move mouse to interact!
+// ═══════════════════════════════════════════════════════════════════════════
+
+mushu('#c').gl()
   .use(shader(`
     // ─────────────────────────────────────────────────────────────────────
     // Noise Functions
