--- a/examples/index.html
+++ b/examples/index.html
@@ -431,6 +431,112 @@
     footer a:hover {
       text-decoration: underline;
     }
+
+    /* ═══════════════════════════════════════════════════════════════════════
+       FLOATING SUPPORT BUTTON & POPUP
+       ═══════════════════════════════════════════════════════════════════════ */
+    .support-fab {
+      position: fixed;
+      bottom: 24px;
+      right: 24px;
+      z-index: 1000;
+    }
+    .support-fab-btn {
+      width: 56px;
+      height: 56px;
+      border-radius: 50%;
+      background: linear-gradient(135deg, var(--accent), var(--accent4));
+      border: none;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem;
+      box-shadow: 0 4px 20px rgba(255,107,157,0.4);
+      transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+    .support-fab-btn:hover {
+      transform: scale(1.1);
+      box-shadow: 0 6px 28px rgba(255,107,157,0.5);
+    }
+    .support-fab-btn.active {
+      transform: rotate(45deg);
+    }
+    .support-popup {
+      position: absolute;
+      bottom: 70px;
+      right: 0;
+      width: 280px;
+      background: var(--card);
+      border: 1px solid var(--border);
+      border-radius: 16px;
+      padding: 20px;
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(10px) scale(0.95);
+      transition: all 0.25s cubic-bezier(0.34, 1.56, 0.64, 1);
+      box-shadow: 0 12px 40px rgba(0,0,0,0.5);
+    }
+    .support-popup.open {
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(0) scale(1);
+    }
+    .support-popup-header {
+      text-align: center;
+      margin-bottom: 16px;
+      padding-bottom: 12px;
+      border-bottom: 1px solid var(--border);
+    }
+    .support-popup-title {
+      font-size: 1rem;
+      font-weight: 700;
+      margin-bottom: 4px;
+      background: linear-gradient(135deg, var(--accent), var(--accent4));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+    }
+    .support-popup-subtitle {
+      font-size: 0.8rem;
+      color: #888;
+    }
+    .support-links {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+    .support-link {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      padding: 12px 14px;
+      border-radius: 10px;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 0.9rem;
+      color: var(--text);
+      background: rgba(255,255,255,0.05);
+      border: 1px solid transparent;
+      transition: all 0.2s;
+    }
+    .support-link:hover {
+      background: rgba(255,255,255,0.1);
+      border-color: var(--border);
+      transform: translateX(4px);
+    }
+    .support-link-icon {
+      font-size: 1.1rem;
+      width: 24px;
+      text-align: center;
+    }
+    .support-link-label {
+      flex: 1;
+    }
+    .support-link-arrow {
+      color: #666;
+      font-size: 0.8rem;
+    }
   </style>
 </head>
 <body>
@@ -686,7 +792,64 @@
     <p>Made with 🍡 by <a href="https://github.com/ConflictingTheories">ConflictingTheories</a> &mdash; <a href="https://github.com/ConflictingTheories/mushu">View on GitHub</a></p>
   </footer>
 
+  <!-- ═══════════════════════════════════════════════════════════════════════
+       FLOATING SUPPORT BUTTON
+       ═══════════════════════════════════════════════════════════════════════ -->
+  <div class="support-fab" id="supportFab">
+    <div class="support-popup" id="supportPopup">
+      <div class="support-popup-header">
+        <div class="support-popup-title">💝 Support mushu</div>
+        <div class="support-popup-subtitle">Help keep this project alive!</div>
+      </div>
+      <div class="support-links">
+        <a href="https://buymeacoffee.com/kderbyma" class="support-link" target="_blank">
+          <span class="support-link-icon">☕</span>
+          <span class="support-link-label">Buy Me a Coffee</span>
+          <span class="support-link-arrow">→</span>
+        </a>
+        <a href="https://github.com/sponsors/ConflictingTheories" class="support-link" target="_blank">
+          <span class="support-link-icon">⭐</span>
+          <span class="support-link-label">GitHub Sponsors</span>
+          <span class="support-link-arrow">→</span>
+        </a>
+        <a href="https://patreon.com/kderbyma" class="support-link" target="_blank">
+          <span class="support-link-icon">🎯</span>
+          <span class="support-link-label">Patreon</span>
+          <span class="support-link-arrow">→</span>
+        </a>
+        <a href="https://ko-fi.com/kderbyma" class="support-link" target="_blank">
+          <span class="support-link-icon">🥤</span>
+          <span class="support-link-label">Ko-fi</span>
+          <span class="support-link-arrow">→</span>
+        </a>
+      </div>
+    </div>
+    <button class="support-fab-btn" id="supportFabBtn" aria-label="Support this project">
+      💝
+    </button>
+  </div>
+
   <script>
+    // Support FAB toggle
+    const supportFab = document.getElementById('supportFab');
+    const supportFabBtn = document.getElementById('supportFabBtn');
+    const supportPopup = document.getElementById('supportPopup');
+    
+    supportFabBtn.addEventListener('click', (e) => {
+      e.stopPropagation();
+      const isOpen = supportPopup.classList.contains('open');
+      supportPopup.classList.toggle('open');
+      supportFabBtn.classList.toggle('active');
+    });
+    
+    // Close popup when clicking outside
+    document.addEventListener('click', (e) => {
+      if (!supportFab.contains(e.target)) {
+        supportPopup.classList.remove('open');
+        supportFabBtn.classList.remove('active');
+      }
+    });
+
     function showTab(tab) {
       // Update tabs
       document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
